<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dialog_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!--contentInsetStart-->
    <TextView
        android:id="@+id/lb_current_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/contentInsetStart"
        tools:text="入站檢查"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"/>

    <RelativeLayout
        android:layout_below="@+id/lb_current_title"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/contentInsetStart"
        android:layout_marginRight="@dimen/contentInsetStart"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin_medium">

        <TextView
            android:id="@+id/lb_current_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:layout_centerVertical="true"
            android:text="(X/X)"
            android:gravity="center" />

        <!--<ImageButton-->
        <!--android:id="@+id/img_sign"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_width="@dimen/check_image_size"-->
        <!--android:layout_height="@dimen/check_image_size"-->
        <!--android:scaleType="fitXY"-->
        <!--android:background="@null"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:src="@drawable/ic_menu_sign" />-->

        <com.jfdimarzio.provoking.widget.FeelOptionGroup
            android:id="@+id/area_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/text_padding_large"
            android:layout_marginBottom="@dimen/text_margin_medium"
            android:visibility="visible">

            <com.jfdimarzio.provoking.widget.CheckBoxFeel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                android:text="@string/lb_lock_backup"/>

            <com.jfdimarzio.provoking.widget.CheckBoxFeel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                android:text="@string/lb_lock_fix"/>

            <com.jfdimarzio.provoking.widget.CheckBoxFeel
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:textColor="@color/white"
                style="?android:attr/checkboxStyle"
                android:text="@string/lb_lock_stop"/>

        </com.jfdimarzio.provoking.widget.FeelOptionGroup>

    </RelativeLayout>

</LinearLayout>