<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_download"
    tools:context=".DownloadActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/area_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/text_margin_large"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/area_btn"
                    android:background="@drawable/bg_form_rounded"
                    android:orientation="vertical">

                    <AutoCompleteTextView
                        android:id="@+id/txt_userid"
                        style="@style/BaseEditView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_account"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:drawableLeft="@drawable/ic_user"
                        android:layout_marginTop="@dimen/text_margin_medium"
                        android:layout_marginBottom="@dimen/text_margin_small"
                        android:layout_marginLeft="@dimen/text_margin_medium"
                        android:layout_marginRight="@dimen/text_margin_medium"
                        android:drawablePadding="@dimen/drawable_padding"
                        />

                    <View
                        android:id="@+id/horizontal_divider"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@drawable/dotted_line"
                        android:layerType="software" >
                    </View>

                    <TextView
                        android:id="@+id/lb_checkdate"
                        style="@style/BaseEditView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_calendar"
                        android:layout_marginTop="@dimen/text_margin_medium"
                        android:layout_marginBottom="@dimen/text_margin_small"
                        android:layout_marginLeft="@dimen/text_margin_medium"
                        android:layout_marginRight="@dimen/text_margin_medium"
                        android:drawablePadding="@dimen/drawable_padding"
                        />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/area_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/text_margin_medium">

                    <ImageButton
                        android:id="@+id/btn_query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_search_white"/>

                    <ImageView
                        android:id="@+id/img_connect_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_query"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_signal_wifi_off_red_800_36dp"/>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/text_padding_large"
        android:paddingBottom="@dimen/text_padding_large"
        android:orientation="vertical"
        android:background="@color/colorPrimary2Transport">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/lb_total_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/template_download_total"/>

            <TextView
                android:id="@+id/lb_select_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/lb_total_count"
                android:textColor="@color/green_700"
                tools:text="@string/template_download_selected"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/soft_black"
                    android:text="@string/lb_switch_all"
                    android:checked="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@color/soft_black"
                    android:text="@string/lb_filter_show_current"
                    android:checked="true"/>

            </RelativeLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:scrollbars="horizontal">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.jfdimarzio.provoking.widget.CusEmptyRecyclerView
            android:id="@+id/rv_download"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <ViewStub
            android:id="@+id/vs_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout="@layout/empty_download" />

        <!-- loading progress -->

        <LinearLayout
            android:id="@+id/area_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/loading_overlay"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/request_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorAccent"
                android:text="@string/request_progress"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </FrameLayout>

    <Button
        android:id="@+id/btn_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Primary2Button"
        android:layout_weight="0"
        android:layout_below="@+id/rv_download"
        android:text="@string/action_download"/>
</LinearLayout>

